@@ -1,3 +1,13 @@
 ##### Java——七种垃圾收集器+JDK11最新ZGC: https://blog.csdn.net/CrankZ/article/details/86009279 
 
 ##### 一文了解JVM全部垃圾回收器，从Serial到ZGC: https://juejin.im/post/5bade237e51d450ea401fd71#heading-6 
+
+#####  谁是JDK8中最快的GC：https://www.javazhiyin.com/34407.html 
+
+**JDK8默认垃圾回收器详解**：
+
+```shell
+java -XX:+PrintCommandLineFlags -version
+java -XX:+PrintGCDetails -version
+```
+
